--- a/style.css
+++ b/style.css
@@ -1,21 +1,20 @@
 :root{
-    --cor-de-fundo: #1e1e1e;
-    --verde: #5FFF57;
-    --branco: #FFFFFF;
-    --botao-ativo: #3A375E;
+    --cor-de-fundo:#1e1e1e;
+    --verde:#5FFF57;
+    --branco:#FFFFFF;
+    --botao-ativo:#3A375E;
     --botao-inativo: rgba(58,55,94,0.5);
-    --texto-fundo: rgba(58,55,94,0.3);
+    --texto-fundo: rgba(58,55,94,0.3); 
 }
 
 *{
     color: var(--branco);
 }
-
-span{
-    color: var(--verde);
-}
 body{
     background-color: var(--cor-de-fundo);
+}
+span{
+   color: #5FFF57;
 }
 .conteudo-principal{
     display: flex;
@@ -24,8 +23,8 @@ body{
     align-items: center;
     max-width: 1200px;
     width: 100%;
-    margin: 0 auto;
-
+    margin: 0  auto;
+    
 }
 
 .titulo-principal{
@@ -33,39 +32,30 @@ body{
     width: 100%;
     font-size: 32px;
 }
+.botoes{
+    display: block;
 
+}
 .botao{
     background-color: var(--botao-inativo);
-    color: white;
+    color:white;
     display: flex;
     justify-content: center;
-    /*Determina a posição horizontal no display flex*/
     align-items: center;
-    /*Determina a posição vertical no display flex*/
     width: 100%;
     font-size: 18px;
-    /*Controla o tamanho da fonte*/
-    padding: 1em ;
-    /* Um afastamento interno */
+    padding: 1em;
     border-bottom: 4px solid var(--botao-ativo);
     border-left: 2px solid var(--botao-ativo);
     border-right: 2px solid var(--botao-ativo);
 }
-.botoes{
- display: block;   
-}
-.botao:first-child{
-    border-radius: 20px 20px 0 0;
-}
-
-.botao:last-child{
-    border-radius: 0px 0px 20px 20px;
+.botao{
+    border-radius: 20px 20px 20px 20px;
 }
 .botao.ativo{
     background-color: var(--botao-ativo);
-    border-bottom: 2px solid var(--verde) ;
+    border-bottom: 2px solid var(--verde);
 }
-
 .aba-conteudo{
     display: none;
 }
@@ -73,27 +63,30 @@ body{
     display: block;
 }
 .abas-textos{
-    background-color: var(--botao-inativo);
+    background-color: var(--botao-ativo) ;
     padding: 40px;
     border-radius: 15px;
 }
 .aba-conteudo-titulo-principal{
-    font-size: 28px;
+    font-size: 20px;
     text-align: center;
 }
 .aba-conteudo-titulo-secundario{
     text-align: center;
-    color: var(--verde);
+    color: #5FFF57;
     text-transform: uppercase;
 }
-@media screen and (min-width: 700px){
+@media screen and (min-width: 700px) {
     .botoes{
         display: flex;
     }
+    .botao{
+        border-radius: 0%;
+    }
     .botao:first-child{
-        border-radius: 20px 0 0 20px;
+        border-radius: 20px 0px 0px 20px;
     }
     .botao:last-child{
-        border-radius: 0 20px 20px 0;
+        border-radius: 0px 20px 20px 0px;
     }
 }
